--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -10,6 +10,14 @@ body{
     background-position: center;
     width: 100%;
     height: 100vh;
+}
+.loginBody{
+    background-image: url('../images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
